# llm-regression-guard

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  run_full_pipeline.py
.github/workflows/: regression.yml
Scripts/: slack_alerter.py  slack_utils.py
data/: diff_report.json  golden_dataset_v1.json
prompts/: v1_billing_classifier.yaml
src/: async_eval_classifier.py  db.py  diff_eval.py  email_classifier.py  email_fetcher.py  enrich_auto.py  generate_html_report.py  inject_auto.py  inject_validated.py  preclassify.py  report_html.py  report_utils.py  run_model_on_golden.py  validate_cli.py
tests/: conftest.py  test_db.py  test_diff_eval.py  test_dummy_classifier.py  test_email_classifier.py  test_email_fetcher.py  test_golden_dataset_cases.json  test_imap_fetch.py  test_pipeline_integration.py  test_preclassify.py  test_report_html.py  test_report_utils.py  test_slack.py  test_validate_cli.py
