[project]
name = "llm-regression-pipeline"
version = "1.0.0"
description = "Production-ready LLM regression detection and reporting pipeline"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "Scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"Scripts/__init__.py" = ["N999"]
"src/async_eval_classifier.py" = ["E402"]
"src/generate_html_report.py" = ["E402"]
"src/run_model_on_golden.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src", "Scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = "test_*.py"
python_functions = "test_*"
